# DesignPatterns

./: CMakeLists.txt  README.md
src/AbstractFactory/: main.cpp
src/Adapter/: main.cpp
src/Builder/: main.cpp
src/Command/: main.cpp
src/Composite/: main.cpp
src/Decorator/: main.cpp
src/Facade/: main.cpp
src/Factory/: main.cpp
src/Flyweight/: main.cpp
src/Prototype/: main.cpp
src/Proxy/: main.cpp
src/Singleton/: main.cpp
